# russian-4-task

./: README.md  pyproject.toml  words.txt
src/: run_bot.py
