[project]
name = "russian-4-task"
version = "0.1.0"
description = "Russian 4 task practice for ege."
authors = [
    {name = "Anton Golubchikov",email = "anton1programmist@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot (>=22.6,<23.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "russian_4_task", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


# Ruff

[tool.ruff]
line-length = 79
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# mypy configuration

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true


# pytest configuration

[tool.pytest.ini_options]
pythonpath = ["src"]


[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
    "pyright (>=1.1.408,<2.0.0)",
    "mypy (>=1.19.1,<2.0.0)"
]
